--- a/02-initiation.Rmd
+++ b/02-initiation.Rmd
@@ -4,7 +4,7 @@
 
 ```{r, echo = FALSE}
 library(knitr)
-knitr::include_graphics("resources/figures/chap2_intro.jpg")
+knitr::include_graphics("resources/figures/chap2_intro.png")
 ```
 
 
